--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1470,10 +1470,10 @@ button {
 
 @media (min-width: 43.875em) {
   .main-image {
-    width: 49.36709%;
+    width: 44.3038%;
     float: left;
     margin-right: 1.26582%;
-    padding-left: 5.06329%;
+    margin-left: 5.06329%;
   }
 
   .intro-copy {
